// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SelectItem /> it checks shouldComponentUpdate 1`] = `
<SelectItem
  active={true}
  index={1}
  onHover={[Function]}
  onSelect={[Function]}
>
  <div
    className="mfui-select-item mfui-select-item_active"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    <div
      className="mfui-select-item__title"
    />
  </div>
</SelectItem>
`;

exports[`<SelectItem /> it checks shouldComponentUpdate return false 1`] = `
<SelectItem
  index={1}
  onHover={[Function]}
  onSelect={[Function]}
>
  <div
    className="mfui-select-item"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    <div
      className="mfui-select-item__title"
    />
  </div>
</SelectItem>
`;

exports[`<SelectItem /> it renders SelectItem 1`] = `
<SelectItem
  index={1}
  onHover={[Function]}
  onSelect={[Function]}
>
  <div
    className="mfui-select-item"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    <div
      className="mfui-select-item__title"
    />
  </div>
</SelectItem>
`;

exports[`<SelectItem /> it renders left icon 1`] = `
<SelectItem
  index={1}
  leftIcon={<test-file-stub />}
  onHover={[Function]}
  onSelect={[Function]}
>
  <div
    className="mfui-select-item mfui-select-item_left-icon"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    <div
      className="mfui-select-item__left-icon-box"
    >
      <test-file-stub />
    </div>
    <div
      className="mfui-select-item__title"
    />
  </div>
</SelectItem>
`;

exports[`<SelectItem /> it renders right icon 1`] = `
<SelectItem
  index={1}
  onHover={[Function]}
  onSelect={[Function]}
  rightIcon={<test-file-stub />}
>
  <div
    className="mfui-select-item mfui-select-item_right-icon"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    <div
      className="mfui-select-item__title"
    />
    <div
      className="mfui-select-item__right-icon-box"
    >
      <test-file-stub />
    </div>
  </div>
</SelectItem>
`;
